2008-05-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (Problems): Remove fixed issues.
	(vc-expand-dirs): Avoid returning directories.
	(vc-dir): Fix C-x v v binding.
	(vc-make-backend-object): Fix name.
	(vc-dir-show-fileentry): Fix docstring.
	(vc-dir-refresh): Use vc-dir-backend.  Fix docstring.
	(vc-dir-refresh-files): Use vc-dir-backend.  Fix docstring.  Reset
	the state for directories.

	* vc-dispatcher.el (vc-resynch-window): Fix mode-line updating.
	(vc-dir-menu-map): Fix menu title for the menu bar and the popup menu.
	(vc-dir-child-files): New function.
	(vc-dir-node-directory): New function.
	(vc-dir-update, vc-dir-parent-marked-p)
	(vc-dir-children-marked-p, vc-dir-mark-all-files)
	(vc-dir-marked-only-files, vc-dispatcher-selection-set): Use it.

	* vc-cvs.el (vc-cvs-status-extra-headers): Align labels.

2008-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-context-mid-hunk-header-re): New const.
	(diff-font-lock-keywords, diff-context->unified)
	(diff-reverse-direction, diff-fixup-modifs, diff-sanity-check-hunk)
	(diff-hunk-text, diff-find-source-location): Use it.
	(diff-post-command-hook): Let the user edit the hunk headers.

2008-05-26  Andreas Schwab  <schwab@suse.de>

	* vc.el (vc-default-prettify-state-info): Fix formatting of an
	unknown state.

	* tar-mode.el (tar-summarize-buffer): Comment fix.

2008-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-summarize-buffer): Handle GNU Tar @LongLink format.

2008-05-26  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-hebrew.el (diary-ordinal-suffix): Declare for compiler.

2008-05-25  John Paul Wallington  <jpw@pobox.com>

	* proced.el (proced-next-line, proced-previous-line):
	Avoid calling `next-line' and `previous-line' from Lisp code.

2008-05-25  Ed Reingold  <reingold@emr.cs.iit.edu>

	* calendar/cal-hebrew.el (diary-hebrew-yahrzeit):
	Use diary-ordinal-suffix.

2008-05-24  Juanma Barranquero  <lekktu@gmail.com>
