@@ -8,6 +8,8 @@
 	(vc-dir-refresh): Use vc-dir-backend.  Fix docstring.
 	(vc-dir-refresh-files): Use vc-dir-backend.  Fix docstring.  Reset
 	the state for directories.
+	(vc-dir-headers): Align labels.
+	(vc-default-status-printer): Do no call prettify-state-info.
 
 	* vc-dispatcher.el (vc-resynch-window): Fix mode-line updating.
 	(vc-dir-menu-map): Fix menu title for the menu bar and the popup menu.
